--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.12",
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
